Fixed Travis build
- modified Travis configuration
- changed minimal required PHP version to `7.3`
- changed minimal required version of `nette/tester` to `2.3.4`
- added tabs indentation in `vendor-bin` composers
- removed whitespaces from LICENSE and README

--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
 		}
 	],
 	"require": {
-		"php": "^7.2",
+		"php": "^7.3",
 		"nette/di": "^3.0.3"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
 		"friendsofphp/php-cs-fixer": "^2.0",
 		"nette/bootstrap": "^3.0",
-		"nette/tester": "^2.0",
+		"nette/tester": "^2.3.4",
 		"roave/security-advisories": "dev-master"
 	},
 	"suggest": {
@@ -41,7 +41,15 @@
 			"@tests:lowest",
 			"@tests:highest"
 		],
-		"tests:lowest" : "composer update --no-progress --prefer-dist --prefer-lowest --prefer-stable && composer bin all update --no-progress --prefer-dist --prefer-lowest --prefer-stable && vendor/bin/tester ./tests",
-		"tests:highest" : "composer update --no-progress --prefer-dist --prefer-stable && composer bin all update --no-progress --prefer-dist --prefer-stable && vendor/bin/tester ./tests"
+		"tests:lowest" : [
+			"@composer update --no-progress --prefer-dist --prefer-lowest --prefer-stable",
+			"@composer bin all update --no-progress --prefer-dist --prefer-lowest --prefer-stable",
+			"vendor/bin/tester ./tests"
+		],
+		"tests:highest" : [
+			"@composer update --no-progress --prefer-dist --prefer-stable",
+			"@composer bin all update --no-progress --prefer-dist --prefer-stable",
+			"vendor/bin/tester ./tests"
+		]
 	}
 }
