Update & Migrations support
- added support for `nettrine/migrations`
- added extension interface `MigrationsDirectoriesProviderInterface` and DI DTO `MigrationsDirectory`
- updated `nettrine` packages to `^0.8`
- updated php-cs-fixer and added new configuration

--- a/vendor-bin/nettrine/composer.json
+++ b/vendor-bin/nettrine/composer.json
@@ -1,7 +1,8 @@
 {
 	"require": {
 		"theofidry/composer-inheritance-plugin": "^1.0",
-		"nettrine/orm": "^0.7"
+		"nettrine/orm": "^0.8",
+		"nettrine/migrations": "^0.8"
 	},
 	"config": {
 		"bin-dir": "bin",
