--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,19 @@
 		}
 	],
 	"require": {
-		"php": "^7.3",
+		"php": "^7.4",
 		"nette/di": "^3.0.3"
 	},
 	"require-dev": {
 		"bamarni/composer-bin-plugin": "^1.4",
-		"friendsofphp/php-cs-fixer": "^2.0",
+		"friendsofphp/php-cs-fixer": "^3.0",
 		"nette/bootstrap": "^3.0",
 		"nette/tester": "^2.3.4",
-		"roave/security-advisories": "dev-master"
+		"roave/security-advisories": "dev-latest"
 	},
 	"suggest": {
-		"nettrine/orm": "For integration with nettrine/orm"
+		"nettrine/orm": "For integration with nettrine/orm",
+		"nettrine/migrations": "For integration with nettrine/migrations"
 	},
 	"autoload": {
 		"psr-4": {
